tests/ui/main-wrong-location.stderr
error[E0601]: `main` function not found in crate `main_wrong_location`
  --> $DIR/main-wrong-location.rs:5:2
   |
LL | }
   |  ^ the main function must be defined at the crate level (in `$DIR/main-wrong-location.rs`)
   |
note: here is a function named `main`
  --> $DIR/main-wrong-location.rs:4:5
   |
LL |     fn main() { }
   |     ^^^^^^^^^
   = note: you have one or more functions named `main` not defined at the crate level
   = help: consider moving the `main` function definitions

error: aborting due to previous error

For more information about this error, try `rustc --explain E0601`.
